opam-version: "2.0"

maintainer: "denis.merigoux@inria.fr"
authors: [
  "Denis Merigoux"
  "Raphaël Monat"
]
license: "CeCILL-C"
homepage: "https://gitlab.inria.fr/verifisc/verifisc-m"
bug-reports: "https://gitlab.inria.fr/verifisc/verifisc-m.issues"
dev-repo: "git+https://gitlab.inria.fr/verifisc/verifisc-m.git"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "4.07"}
  "dune" {build}
  "ANSITerminal"
  "re"
  "ppx_deriving"
  "ocamlgraph"
  "z3"
  "odoc"
]
