(env
 (dev
  (flags
   (:standard -warn-error -a)))
 (ci
  (flags
   (:standard -w +a-4-40..42-44-45-70 -warn-error +a)))
 (release
  (flags
   (:standard -w +a-4-40..42-44-45-70 -warn-error -a))))

(rule
 (with-stdout-to
  linking-flags-mlang.sexp
  (run ./gen-linking-flags.sh %{env:LINKING_MODE=} %{ocaml-config:system})))

(executable
 (name main)
 (package mlang)
 (public_name mlang)
 (flags
  (:standard
   (:include linking-flags-mlang.sexp)))
 (libraries mlang))
