(env
 (dev
  (flags
   (:standard -warn-error -a -g)))
 ;; fail on warnings in CI mode
 (ci
  (flags
   (:standard -w +a-4-40..42-44-45-70 -warn-error +a)))
 ;; show warnings but still allow release in release mode
 (release
  (flags
   (:standard -w +a-4-40..42-44-45-70 -warn-error -a))))

(rule
 (with-stdout-to
  linking-flags-mlang.sexp
  (run ./gen-linking-flags.sh %{env:LINKING_MODE=} %{ocaml-config:system})))

(executable
 (name main)
 (package mlang)
 (public_name mlang)
 (flags
  (:standard
   (:include linking-flags-mlang.sexp)))
 (libraries mlang))
