(ocamllex irj_lexer)

(menhir
 (modules irj_parser)
 (flags --dump --explain --automaton-graph))

;; The following two rules create a copy of the file parser.mly named
;; unitActionsParser.mly. This is a copy of the grammar where the semantic
;; actions have been removed and replaced with unit values. It is compiled
;; by Menhir's table back-end to obtain the module UnitActionsParser.

;; The use of [--external-tokens Parser] is required for the two parsers
;; to share a single [token] type. This makes them usable with the same
;; lexer.

(rule
 (action
  (with-stdout-to
   unitActionsParser.mly
   (run menhir %{dep:irj_parser.mly} --only-preprocess-u))))

(menhir
 (modules unitActionsParser)
 (flags --table --external-tokens Irj_parser))
